hphp/test/slow/traits/duplicate_require.php.expectf

Fatal error: Conflicting requirements for 'A' in %s/test/slow/traits/duplicate_require.php on line 5
